methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:29: error: ':' expected but ')' found.
def faireV(c):Unit = {
            ^MethodsPicture:58: error: identifier expected but '}' found.
}
^